Fix carousel indicators on Chaum page and align everything on the right side of the CHS page on tablet versions.

--- a/client/js/cha_health_system/cha_health_systems.scss
+++ b/client/js/cha_health_system/cha_health_systems.scss
@@ -202,7 +202,7 @@
       }
 
       .top-right {
-        width: 34.2vw;
+        width: 31.2vw;
         margin: 40px 0 0 35px;
 
         p.emb {
@@ -217,7 +217,7 @@
     }
 
     .chs-text-bottom {
-      width: 72vw;
+      width: 75.6vw;
 
       .bottom-right {
         width: 30.5vw;
@@ -228,10 +228,10 @@
       #myCarousel {
         width: 34vw;
         margin: 0;
-        float: none;
+        float: right;
 
         .carousel-indicators.chs-indicators {
-          margin-left: -38%;
+          margin-left: -39%;
         }
       }
     }
@@ -323,7 +323,7 @@
       }
     }
   }
-  
+
   .chs-hepts {
     display: none;
   }
